# End_to_End_ML_API

./: Dockerfile  README.md  build-push.sh  deploy-aks.sh  deployment-project.yaml  deployment-redis.yaml  kustomization.yaml  load.js  main.py  namespace.yaml  patch-deployment-project-copy.yaml  patch-deployment-project.yaml  pyproject.toml  service-project.yaml  service-redis.yaml  test_mlapi.py  virtual-service.yaml
base/: deployment-project.yaml  deployment-redis.yaml  service-project.yaml  service-redis.yaml
overlays/dev/: kustomization.yaml
overlays/prod/: kustomization.yaml  namespace.yaml  patch-deployment-project-copy.yaml  patch-deployment-project.yaml  virtual-service.yaml
tests/: test_mlapi.py
