[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.39.1"
torch = [
  {version = "^2.2.1", "platform" = "win32"},
  {version = "^2.2.1", "platform" = "linux"},
  {version = "^2.2.1", "platform" = "darwin",  markers = "platform_machine == 'x86_64'" },
  {version = "^2.2.1", "platform" = "darwin",  markers = "platform_machine == 'arm64'" },
  # {version = "^2.2.1+cu121", source = "pytorch-cuda", "platform" = "linux"}, # this is for training
]
requests = "^2.31"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
fastapi = "^0.110.0"
uvicorn = "^0.29"

[tool.poetry.group.dev.dependencies]
datasets = "^2.18"
scikit-learn = "^1.4.1"
pytest = "^8.1"
ruff = "^0.3"
pre-commit = "^3.7"
httpx = "^0.27"
evaluate = "^0.4"
accelerate = "^0.28.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"
